--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -26,7 +26,7 @@
               <ion-input
                 name="email"
                 type="email"
-                placeholder='<a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="bdc4d2c8cffdd8d0dcd4d193ded2d0">[email protected]</a>'
+                placeholder="メールアドレス"
                 ngModel
                 required
               ></ion-input>
