--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,33 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Ionic Blank
+      ChatKit Demo
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+<ion-content padding>
+  <div text-center>
+    <ion-button color="lignt" outline size="large" [routerLink]="'/chat'">
+      <ion-icon name="chatbubbles"></ion-icon>
+    </ion-button>
   </div>
+  <h4>ユーザー</h4>
+  <ion-spinner name="dots" *ngIf="let user of userList"></ion-spinner>
+  <ion-list>
+    <ion-item class="user-item" *ngFor="let user of userList">
+      <div class="user-avator">
+        <img [src]="user.avatarURL" alt="" />
+      </div>
+      <ion-label class="user-name">
+        {{ user.name }}
+      </ion-label>
+      <div class="user-presence">
+        <ion-icon
+          [class.user-online]="isOnline(user)"
+          name="radio-button-on"
+        ></ion-icon>
+      </div>
+    </ion-item>
+  </ion-list>
 </ion-content>
