--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -1,7 +1,38 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>chat</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>ChatKit</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content> </ion-content>
+<ion-content padding>
+  <div class="container">
+    <div *ngFor="let msg of messageList" class="message list">
+      <img class="user-img" [src]="msg.sender.avatarURL" alt="" src="" />
+      <div class="msg-detail">
+        <div class="msg-info">
+          <p>{{ msg.sender.name }}</p>
+        </div>
+        <div class="msg-content">
+          <span class="triangle"></span>
+          <p class="line-breaker">{{ msg.text }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</ion-content>
+
+<ion-footer no-border>
+  <div class="input-wrap">
+    <textarea
+      #messsageInput
+      placeholder="Enter your messge!"
+      [(ngModel)]="charMessage"
+      (keyup.enter)="sendMessage()"
+    >
+    </textarea>
+
+    <button ion-button clear icon-only item-right (click)="sendMessage()">
+      <ion-icon name="ios-send" ios="ios-send" md="md-send"></ion-icon>
+    </button>
+  </div>
+</ion-footer>
