バグの修正と本番用にBuild

--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -26,7 +26,7 @@
     <textarea
       #messsageInput
       placeholder="Enter your messge!"
-      [(ngModel)]="charMessage"
+      [(ngModel)]="chatMessage"
       (keyup.enter)="sendMessage()"
     >
     </textarea>
