--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button text="" icon="arrow-back"></ion-back-button>
+    </ion-buttons>
     <ion-title>ChatKit</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -25,7 +28,7 @@
   <div class="input-wrap">
     <textarea
       #messsageInput
-      placeholder="Enter your messge!"
+      placeholder="メッセージ"
       [(ngModel)]="chatMessage"
       (keyup.enter)="sendMessage()"
     >
