--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -18,6 +18,11 @@
         flex: 1;
     }
 
+    .label-user-info {
+        width: 200px;
+        margin-right: 40px;
+    }
+
     .user-online {
         color: #32eb32;
     }
