--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,28 +1,38 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>
-      ChatKit
-    </ion-title>
+    <ion-buttons slot="secondary">
+      <ion-button>編集</ion-button>
+    </ion-buttons>
+    <ion-title>Chat</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button>
+        <ion-icon slot="icon-only" name="add"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
   <div text-center>
-    <ion-button color="light" outline size="large" [routerLink]="'/chat'">
+    <!-- <ion-button color="light" outline size="large" [routerLink]="'/chat'">
       <ion-icon name="chatbubbles"></ion-icon>
       チャットのスタート
-    </ion-button>
+    </ion-button> -->
   </div>
 
-  <h4>ユーザー</h4>
   <ion-spinner name="dots" *ngIf="userList.length === 0"></ion-spinner>
   <ion-list>
-    <ion-item class="user-item" *ngFor="let user of userList">
-      <div class="user-avator">
+    <ion-list-header>グループ１</ion-list-header>
+    <ion-item *ngFor="let user of userList" class="user-item">
+      <ion-avatar slot="start">
         <img [src]="user.avatarURL" alt="" />
-      </div>
-      <ion-label class="user-name">
-        {{ user.name }}
+      </ion-avatar>
+      <ion-label class="label-user-info">
+        <h4>{{ user.name }}</h4>
+        <p>ここには説明というか最近のものを記載</p>
       </ion-label>
       <div class="user-presence">
         <ion-icon
